--- a/client/public/login.html
+++ b/client/public/login.html
@@ -28,7 +28,7 @@
                     if (loginWindow.closed) {
                         clearInterval(timer);
                         console.log("closed");
-                        axios.get("/login").then((x) => {
+                        axios.get("/api/user/profile").then((x) => {
                             let { data } = x;
                             let { session } = data;
                             console.log("session", session);
